--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,8 @@
 						<ul>
 							<li><a href="https://www.linkedin.com/in/awalker-vcra/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/vCra" class="icon fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="mailto:aaw13@aber.ac.uk" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="mailto:aaron+hello@vcra.io" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="/keys.html" class="icon fa-unlock-alt"><span class="label">GPG and SSH Keys</span></a></li>
 						</ul>
 					</nav>
 				</header>
